--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Contractbook Workouts</title>
+    <script src="../global.js"></script>
+    <link rel="stylesheet" href="./dashboard.css">
 </head>
 <body>
 
@@ -13,5 +15,10 @@
     <div id="dashboard-challenge-goals"></div>
 
 </div>
+
+<script src="./dashboardEmployees.js"></script>
+<script src="./dashboardPrizes.js"></script>
+<script src="./dashboardChallengeGoals.js"></script>
+<script src="./dashboardCompany.js"></script>
 </body>
 </html>
