company dashboard total workouts og corsconfig

--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Contractbook Workouts</title>
     <script src="../global.js"></script>
+    <script src="../lib/HTMLEscape.js"></script>
     <link rel="stylesheet" href="./dashboard.css">
 </head>
 <body>
 
 <div id="dashboard-div">
-    <div id="dashboard-company"></div>
+    <div id="dashboard-company">
+        <div id="company-workout"></div>
+    </div>
     <div id="dashboard-employees"></div>
     <div id="dashboard-prizes"></div>
     <div id="dashboard-challenge-goals"></div>
