--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -12,6 +12,8 @@
 <div id="dashboard-div">
     <div id="dashboard-company">
         <div id="company-workout"></div>
+        <div id="company-workout-yearly"></div>
+        <div id="company-workout-monthly"></div>
     </div>
     <div id="dashboard-employees"></div>
     <div id="dashboard-prizes"></div>
