CSS Fix, Flex display, Workout bars looking good. Useful stuff all around. A bunch of filters and sortings.

--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -10,14 +10,14 @@
 <body>
 
 <div id="dashboard-div">
-    <div id="dashboard-company">
+    <div class="dashboard-boxes" id="dashboard-company">
         <div id="company-workout"></div>
         <div id="company-workout-yearly"></div>
         <div id="company-workout-monthly"></div>
     </div>
-    <div id="dashboard-employees"></div>
-    <div id="dashboard-prizes"></div>
-    <div id="dashboard-challenge-goals"></div>
+    <div class="dashboard-boxes" id="dashboard-employees"></div>
+    <div class="dashboard-boxes" id="dashboard-prizes"></div>
+    <div class="dashboard-boxes" id="dashboard-challenge-goals"></div>
 
 </div>
 
