--- a/src/main/resources/static/employee/employee.html
+++ b/src/main/resources/static/employee/employee.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="../global.js"></script>
+    <script src="../lib/HTMLEscape.js"></script>
+    <link rel="stylesheet" href="./employeeDashboard.css">
+
 </head>
 <body>
+
+<div id="graph-box">
+    <div id="employee-workout-graph"></div>
+    <div id="employee-workout-dates"></div>
+</div>
+
+
+
+<script src="./employeeDashboardGraph.js"></script>
 
 </body>
 </html>
