Small fixes everywhere :)

--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -6,14 +6,16 @@
     <script src="../global.js"></script>
     <script src="../lib/HTMLEscape.js"></script>
     <link rel="stylesheet" href="./dashboard.css">
+    <link rel="stylesheet" href="../global.css">
 </head>
 <body>
 
 <div id="dashboard-div">
     <div class="dashboard-boxes" id="dashboard-company">
-        <div id="company-workout"></div>
-        <div id="company-workout-yearly"></div>
-        <div id="company-workout-monthly"></div>
+        <div id="company-workout">
+            <img id="logo" src="https://assets-global.website-files.com/5a0ab23fd65a2f0001be1464/617075a4617cf63934304785_LOGO.svg" width="300">
+        </div>
+        <div id="company-workout-monthly-yearly"></div>
     </div>
     <div class="dashboard-boxes" id="dashboard-employees"></div>
     <div class="dashboard-boxes" id="dashboard-prizes"></div>
