--- a/src/main/resources/static/employee/employee.html
+++ b/src/main/resources/static/employee/employee.html
@@ -6,6 +6,7 @@
     <script src="../global.js"></script>
     <script src="../lib/HTMLEscape.js"></script>
     <link rel="stylesheet" href="./employeeDashboard.css">
+    <link rel="stylesheet" href="../global.css">
 
 </head>
 <body>
