--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -7,6 +7,7 @@
     <script src="../lib/HTMLEscape.js"></script>
     <link rel="stylesheet" href="./dashboard.css">
     <link rel="stylesheet" href="../global.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
 </head>
 <body>
 
