Employee graph, lines, counter, whatever

--- a/src/main/resources/static/employee/employee.html
+++ b/src/main/resources/static/employee/employee.html
@@ -12,6 +12,7 @@
 <body>
 
 <div id="graph-box">
+    <div id="employee-workout-counter"></div>
     <div id="employee-workout-graph"></div>
     <div id="employee-workout-dates"></div>
 </div>
