Diagram for month is cool I guess and the extra stats.

--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -14,7 +14,7 @@
 <div id="dashboard-div">
     <div class="dashboard-boxes" id="dashboard-company">
         <div id="company-workout">
-            <img id="logo" src="https://assets-global.website-files.com/5a0ab23fd65a2f0001be1464/617075a4617cf63934304785_LOGO.svg" width="300">
+            <a href="../dashboard/dashboard.html"><img id="logo" src="https://assets-global.website-files.com/5a0ab23fd65a2f0001be1464/617075a4617cf63934304785_LOGO.svg" width="300"></a>
         </div>
         <div id="company-workout-monthly-yearly"></div>
     </div>
