--- a/src/main/resources/static/employee/employee.html
+++ b/src/main/resources/static/employee/employee.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Employee</title>
     <script src="../global.js"></script>
     <script src="../lib/HTMLEscape.js"></script>
     <link rel="stylesheet" href="./employeeDashboard.css">
@@ -10,16 +10,23 @@
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
 </head>
 <body>
+<div id="employee-div">
+    <div id="content-box">
+        <div id="company-workout">
+            <a href="../dashboard/dashboard.html"><img id="logo" src="https://assets-global.website-files.com/5a0ab23fd65a2f0001be1464/617075a4617cf63934304785_LOGO.svg" width="300"></a>
+        </div>
+    </div>
+    <div id="graph-box">
+        <div id="employee-workout-counter"></div>
+        <div id="employee-workout-graph"></div>
+        <div id="employee-workout-dates"></div>
+    </div>
+    <div id="extra-stats">
+        <p>IDK WHAT THIS IS FOR BUT ITS FOR SOMETHING</p>
 
-<div id="graph-box">
-    <div id="employee-workout-counter"></div>
-    <div id="employee-workout-graph"></div>
-    <div id="employee-workout-dates"></div>
+    </div>
 </div>
-
-
-
 <script src="./employeeDashboardGraph.js"></script>
-
+<script src="./extraStats.js"></script>
 </body>
 </html>
