Dashboard CSS Employee CSS Handles custom month goals now.

--- a/src/main/resources/static/employee/employee.html
+++ b/src/main/resources/static/employee/employee.html
@@ -11,20 +11,19 @@
 </head>
 <body>
 <div id="employee-div">
+
     <div id="content-box">
         <div id="company-workout">
             <a href="../dashboard/dashboard.html"><img id="logo" src="https://assets-global.website-files.com/5a0ab23fd65a2f0001be1464/617075a4617cf63934304785_LOGO.svg" width="300"></a>
         </div>
     </div>
+
     <div id="graph-box">
         <div id="employee-workout-counter"></div>
         <div id="employee-workout-graph"></div>
         <div id="employee-workout-dates"></div>
     </div>
-    <div id="extra-stats">
-        <p>IDK WHAT THIS IS FOR BUT ITS FOR SOMETHING</p>
-
-    </div>
+    <div id="extra-stats"></div>
 </div>
 <script src="./employeeDashboardGraph.js"></script>
 <script src="./extraStats.js"></script>
