Admin se alle employees, søge/filtrere, se alle workouts for en employee, og man kan tilføje/slette workouts til en employee.

--- a/src/main/resources/static/admin/admin.html
+++ b/src/main/resources/static/admin/admin.html
@@ -11,9 +11,22 @@
 </head>
 <body>
 
+<div id="employee-table">
+    <input type="text" id="name-search" onkeyup="searchFunction()" placeholder="Search for names.." title="Type in a name">
+    <table>
+        <thead>
+        <tr>
+            <th>Employees</th>
+        </tr>
+        </thead>
+        <tbody id="admin-table-tbody">
+
+        </tbody>
+    </table>
+
+</div>
 
 
-
-<script src="./adminDashboard.js"></script>
+<script src="./adminEmployees.js"></script>
 </body>
 </html>
