Admin se alle prizes

--- a/src/main/resources/static/admin/admin.html
+++ b/src/main/resources/static/admin/admin.html
@@ -54,17 +54,7 @@
         </tbody>
     </table>
 
-    <table id="prize-table">
-        <thead>
-        <tr>
-            <th>Year</th>
-            <th>Month</th>
-            <th>Count</th>
-        </tr>
-        </thead>
-        <tbody id="prize-table-tbody">
-        </tbody>
-    </table>
+    <div class="admin-prize-box" id="admin-prizes"></div>
 </div>
 
 
