You can change everything now (except prizes)

--- a/src/main/resources/static/admin/admin.html
+++ b/src/main/resources/static/admin/admin.html
@@ -12,7 +12,13 @@
 <body>
 
 <div id="table-wrapper">
-
+<div id="admin-top-box">
+    <div id="company-workout">
+        <a href="../dashboard/dashboard.html"><img id="logo" src="https://assets-global.website-files.com/5a0ab23fd65a2f0001be1464/617075a4617cf63934304785_LOGO.svg" width="300"></a>
+    </div>
+    <div id="workout-date-interval">
+    </div>
+</div>
     <table id="employee-table">
         <thead>
         <tr>
@@ -61,5 +67,6 @@
 <script src="./adminEmployees.js"></script>
 <script src="./adminDates.js"></script>
 <script src="./adminPrizes.js"></script>
+<script src="./adminIntervals.js"></script>
 </body>
 </html>
