Man kan gøre alt med prizes nu

--- a/src/main/resources/static/admin/admin.html
+++ b/src/main/resources/static/admin/admin.html
@@ -60,7 +60,9 @@
         </tbody>
     </table>
 
-    <div class="admin-prize-box" id="admin-prizes"></div>
+    <div class="admin-prize-box" id="admin-prizes">
+        <a href="./adminAddPrize.html"><button>Add new prize</button></a>
+    </div>
 </div>
 
 
