--- a/src/main/resources/static/admin/adminEditPrizes.html
+++ b/src/main/resources/static/admin/adminEditPrizes.html
@@ -3,8 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Prizes</title>
+    <script src="../global.js"></script>
+    <script src="../lib/HTMLEscape.js"></script>
+    <link rel="stylesheet" href="./adminPrizeEdit.css">
+    <link rel="stylesheet" href="../global.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
 </head>
 <body>
+
+<div id="edit-prize-box">
+
+</div>
+
 
 <script src="./adminEditPrizes.js"></script>
 </body>
